--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "morgan": "^1.10.0",
+    "neon": "^2.0.0",
     "pg": "^8.14.1"
   }
 }
