--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@neondatabase/serverless": "^1.0.0",
-    "@react-navigation/bottom-tabs": "^7.3.8",
-    "@react-navigation/native": "^7.1.4",
+    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native-stack": "^7.3.10",
     "dotenv": "^16.4.7",
-    "expo": "~52.0.42",
+    "expo": "^52.0.44",
     "expo-font": "^13.0.4",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
