--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,18 @@
     "@react-navigation/native-stack": "^7.3.10",
     "dotenv": "^16.4.7",
     "expo": "^52.0.44",
+    "expo-blur": "~14.0.3",
+    "expo-camera": "~16.0.18",
     "expo-font": "^13.0.4",
+    "expo-image-picker": "~16.0.6",
+    "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.8",
     "react-native-dotenv": "^3.4.11",
+    "react-native-image-viewing": "^0.2.2",
+    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
     "react-native-web": "~0.19.13"
