--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@expo/metro-runtime": "~4.0.1",
     "@expo/vector-icons": "^14.1.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
     "@neondatabase/serverless": "^1.0.0",
+    "@react-native-community/blur": "^4.4.1",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
@@ -19,22 +22,31 @@
     "expo": "^52.0.44",
     "expo-blur": "~14.0.3",
     "expo-camera": "~16.0.18",
+    "expo-file-system": "~18.0.12",
     "expo-font": "^13.0.4",
     "expo-image-picker": "~16.0.6",
     "expo-linear-gradient": "~14.0.2",
     "expo-status-bar": "~2.0.1",
+    "lucide-react": "^0.503.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.8",
     "react-native-dotenv": "^3.4.11",
+    "react-native-fontawesome": "^7.0.0",
+    "react-native-heroicons": "^4.0.0",
     "react-native-image-viewing": "^0.2.2",
     "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
-    "react-native-web": "~0.19.13"
+    "react-native-svg": "^15.11.2",
+    "react-native-web": "~0.19.13",
+    "expo-gl": "~15.0.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
+    "babel-loader": "^10.0.0"
   },
   "private": true
 }
