--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "~4.0.1",
+    "@expo/metro-runtime": "~5.0.4",
     "@expo/vector-icons": "^14.1.0",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -19,29 +19,27 @@
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.10",
     "dotenv": "^16.4.7",
-    "expo": "^52.0.44",
-    "expo-blur": "~14.0.3",
-    "expo-camera": "~16.0.18",
-    "expo-file-system": "~18.0.12",
+    "expo": "^53.0.5",
+    "expo-blur": "~14.1.4",
+    "expo-camera": "~16.1.6",
+    "expo-file-system": "~18.1.8",
     "expo-font": "^13.0.4",
-    "expo-image-picker": "~16.0.6",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-status-bar": "~2.0.1",
+    "expo-gl": "~15.1.5",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.4",
+    "expo-status-bar": "~2.2.3",
     "lucide-react": "^0.503.0",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "0.76.8",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
     "react-native-dotenv": "^3.4.11",
     "react-native-fontawesome": "^7.0.0",
     "react-native-heroicons": "^4.0.0",
-    "react-native-image-viewing": "^0.2.2",
-    "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-reanimated": "^3.17.5",
-    "react-native-safe-area-context": "^5.3.0",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.10.0",
     "react-native-svg": "^15.11.2",
-    "react-native-web": "~0.19.13",
-    "expo-gl": "~15.0.5"
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
