--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.808.0",
     "@neondatabase/serverless": "^1.0.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2",
     "neon": "^2.0.0",
     "pg": "^8.14.1"
   }
