--- a/backend/package.json
+++ b/backend/package.json
@@ -14,12 +14,16 @@
     "@aws-sdk/client-s3": "^3.808.0",
     "@neondatabase/serverless": "^1.0.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "neon": "^2.0.0",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pg": "^8.14.1"
   }
 }
