--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,34 +15,42 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@neondatabase/serverless": "^1.0.0",
     "@react-native-community/blur": "^4.4.1",
-    "@react-navigation/bottom-tabs": "^7.3.10",
-    "@react-navigation/native": "^7.1.6",
-    "@react-navigation/native-stack": "^7.3.10",
+    "@react-navigation/bottom-tabs": "^7.3.13",
+    "@react-navigation/native": "^7.1.9",
+    "@react-navigation/native-stack": "^7.3.13",
     "dotenv": "^16.4.7",
-    "expo": "^53.0.5",
+    "expo": "^53.0.7",
     "expo-blur": "~14.1.4",
     "expo-camera": "~16.1.6",
     "expo-file-system": "~18.1.8",
     "expo-font": "^13.0.4",
     "expo-gl": "~15.1.5",
+    "expo-haptics": "~14.1.4",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
+    "expo-screen-orientation": "~8.1.6",
+    "expo-sensors": "~14.1.4",
     "expo-status-bar": "~2.2.3",
     "lucide-react": "^0.503.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-dotenv": "^3.4.11",
+    "react-native-draggable-flatlist": "^4.0.3",
     "react-native-fontawesome": "^7.0.0",
+    "react-native-gesture-handler": "^2.25.0",
+    "react-native-haptic-feedback": "^2.3.3",
     "react-native-heroicons": "^4.0.0",
     "react-native-reanimated": "^3.17.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "^4.10.0",
-    "react-native-svg": "^15.11.2",
+    "react-native-svg": "^15.12.0",
     "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.18.6",
+    "@babel/plugin-proposal-optional-chaining": "^7.21.0",
     "@babel/preset-env": "^7.26.9",
     "babel-loader": "^10.0.0"
   },
