Adding JWT posts in frontend

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -19,7 +19,9 @@
         "backgroundColor": "#ffffff"
       }
     },
-    "web": {
-    }
+    "web": {},
+    "plugins": [
+      "expo-secure-store"
+    ]
   }
 }
